Try to fix map modal button on mobile

--- a/style.css
+++ b/style.css
@@ -141,11 +141,11 @@ li {
 
 @keyframes borderin {
     from {
-        border-top: 0px solid;
+        border-top: 0em solid;
     }
 
     to {
-        border-top: 10px solid rgb(97, 181, 63);
+        border-top: 0.4em solid rgb(97, 181, 63);
     }
 }
 
@@ -402,11 +402,9 @@ button:active {
 }
 
 .description {
-    /* display: flex; */
     display: flex;
     overflow-y: auto;
     scrollbar-color: rgb(125, 125, 125) rgb(19, 19, 19);
-    
     scrollbar-width: thin;
     scroll-behavior: smooth;
     flex-direction: column;
